# Espw

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov8n_int8.tflite  yolov8x_fp16.tflite
app/src/main/cpp/: CMakeLists.txt  vulkan_jni.cpp  vulkan_preprocessor.cpp  vulkan_preprocessor.h
app/src/main/java/com/detector/esp/: AppPreloader.java  MainActivity.java  SatelliteActivity.java  SplashActivity.java
app/src/main/java/com/detector/esp/camera/: CameraHelper.java
app/src/main/java/com/detector/esp/detector/: DeepScanner.java  YoloDetector.java
app/src/main/java/com/detector/esp/preprocess/: CpuPreprocessor.java  VulkanPreprocessor.java
app/src/main/java/com/detector/esp/ui/: CaptureButtonView.java  OverlayView.java  SkyPlotView.java  ZoomDialView.java
app/src/main/java/com/detector/esp/utils/: DetectResult.java  DetectResultPool.java  DetectionStabilizer.java  Lang.java  MotionDetector.java
app/src/main/res/drawable/: bg_btn_dark.xml  bg_chip_green.xml  bg_zoom_pill.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/shaders/: yuv_to_rgb.comp
